# Sniping-bot

./: .env.example  .gitignore  DEVELOPER_GUIDE.md  README.md  TODO.txt  TODO_FINAL.txt  audit_report.txt  cahier des charges.txt  docker-compose.dev.yml  docker-compose.yml  init_project_commands.sh  jest.config.js  package-lock.json  package.json  plan de dev.txt  planning_final.txt  playwright.config.ts  structure du projet.txt
.github/workflows/: backend.yml  deploy.yml  frontend.yml  rust.yml
backend/: Dockerfile  a configurer CI varibles  gunicorn.conf.py
backend/database/: init_db.py  init_db.sql
backend/python/: app.py  gunicorn.conf.py  requirements.txt
backend/rust/: Cargo.toml  Dockerfile  README.md
backend/rust/src/: config.rs  ipc.rs  lib.rs  main.rs  security.rs  sniping_executor.rs  solana_interaction.rs  swap.rs  transaction_execution.rs
backend/rust/src/security/: tests.rs
backend/rust/src/solana_interaction/: tests.rs
backend/rust/src/tests/: test_swap.rs
backend/rust/src/transaction_execution/: tests.rs
docs/: DEPLOYMENT.md  DEVOPS.md  INSTALLATION.md  USAGE.md  api_documentation.md  architecture_overview.md  user_guide.md
frontend/react_or_vue_app/: package-lock.json  package.json
frontend/trading-bot-ui/: .eslintrc.json  Dockerfile  package-lock.json  package.json  tsconfig.json
monitoring/: filebeat.yml  prometheus.yml
monitoring/rules/: alerts.yml
scripts/: deploy_test_contracts.ts  setup-e2e.sh  setup_testnet.ts
scripts/deployment/: configure_rpc.ts  deploy.ts
solana-module/: Dockerfile
tests/e2e/: constants.ts  (+3 more)
(+146 files in other folders)
