[package]
name = "solana-sniping-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Module Rust pour le bot de sniping Solana"

[dependencies]
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
spl-token = "4.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
serial_test = "2.0"

[lib]
name = "solana_sniping_bot"
path = "src/lib.rs"

[[bin]]
name = "solana-sniping-bot"
path = "src/main.rs"